@@ -6,5 +6,5 @@ build-backend = "sipbuild.api"
 
 [tool.sip.metadata]
 name = "QTermWidget"
-version = "2.0.1"
+version = "2.1.0"
 requires-dist = ["PyQt6"]
